<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--<EditText android:id="@+id/edit_message"-->
        <!--android:layout_weight="1"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/edit_message" />-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geometria_plana"
        android:onClick="geoEspacial"
        android:id="@+id/button2"
        android:layout_marginTop="109dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_alignEnd="@+id/button1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geometria_espacial"
        android:onClick="geoEspacial"
        android:id="@+id/button1"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aritimetica"
        android:onClick="geoEspacial"
        android:layout_marginTop="27dp"
        android:id="@+id/button3"
        android:layout_below="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_alignEnd="@+id/button1" />
</RelativeLayout>